[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gy-hm100-video-importer"
version = "0.0.1"
description = "Import JVC camera clips from SD card"
authors = [{ name="Alexander Triukhan" }]
readme = "README.md"
license = "MIT"  
requires-python = ">=3.9"
dependencies = [
  "PyYAML>=6.0",
  "tqdm>=4.0"
]

[project.scripts]
gy-import = "jvc_importer.main:main"

[tool.setuptools]
packages = ["jvc_importer"]
